[lint] UseValueOf